fix: html overflow

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -15,6 +15,9 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
+html {
+  overflow-y: scroll;
+}
 body, html {
   font-size: 100%;
   padding: 0;
